console fix for unix/linux + commands with spaces